# memory-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  __main__.py  docker-compose.yml  mcp.json.example  pyproject.toml  requirements.txt  server.py
auth/: __init__.py  api_keys.py  token_verifier.py
client/: memory-mcp-client.py
core/: collections.py  config.py  database.py  migrations.py  registry.py
docs/: agent-instructions.md  api-reference.md  architecture.md  configuration.md  deployment.md  developer-guide.md
environment/: .env.ai-memory.example  .env.memory-mcp.example  .env.semantic-cache.example
providers/: base.py  bedrock.py  manager.py  voyage.py
services/: audit.py  audit_flush_worker.py  auto_capture.py  bedrock_service.py  cache.py  consolidation.py  decision.py  enrichment.py  governance.py  memory.py  mongodb_service.py  prompt_library.py  rate_limiter.py
src/: server.py
src/core/: config.py  logger.py
test_results/: mcp_test_results_20250709_185308.json  mcp_test_summary_20250709_185308.txt
tests/: test_memory_mcp.py
tests/integration/: conftest.py  test_functional.py
tests/unit/: test_admin_tools.py  test_audit.py  test_audit_flush_worker.py  test_auth_api_keys.py  test_auth_token_verifier.py  test_auto_capture.py  test_cache_service.py  test_collections.py  test_config.py  test_consolidation.py  test_database.py  test_decision_service.py  test_decision_tools.py  test_enrichment.py  test_governance.py  test_memory_service.py  test_migrations.py  test_packaging.py  test_prompt_library.py  test_providers.py  test_rate_limiter.py  test_registry.py  test_server.py  test_tools.py
tools/: admin_tools.py  cache_tools.py  decision_tools.py  memory_tools.py  search_tools.py
utils/: serializers.py  validators.py
