[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-mcp"
version = "3.2.1"
description = "MongoDB Atlas-backed MCP server for AI memory management"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "pymongo>=4.12.0",
    "boto3>=1.36.26",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.0",
    "tavily-python>=0.5.1",
    "python-dotenv>=1.0.1",
    "PyJWT>=2.13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "PyJWT>=2.13.0",
]

[project.scripts]
memory-mcp = "memory_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "memory_mcp/__init__.py"
"__main__.py" = "memory_mcp/__main__.py"
"server.py" = "memory_mcp/server.py"
"core" = "memory_mcp/core"
"providers" = "memory_mcp/providers"
"services" = "memory_mcp/services"
"tools" = "memory_mcp/tools"
"auth" = "memory_mcp/auth"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.$",
    "@abstractmethod",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-v", "--tb=short"]
testpaths = ["tests"]
